--- a/css/common.css
+++ b/css/common.css
@@ -28,13 +28,14 @@ ul {
 a {
   display: inline-block;
   margin-left: 24px;
-  margin-bottom: 10px;
+  margin-bottom: 30px;
   width: 140px;
   padding: 8px 16px;
   font-weight: 500;
   color: #fff;
   background: #4e75ff;
   border: none;
+  border-color: transparent;
   border-radius: 8px;
   text-decoration: none;
   text-align: center;
@@ -86,17 +87,44 @@ a:hover {
   display: flex;
   flex-wrap: wrap;
   gap: 48px 24px;
-  margin-left: 24px;
+  max-width: 1440px;
+  margin: 0 auto;
 }
 
 .gallery > li {
   display: flex;
   flex-basis: calc((100% - 48px) / 3);
 }
+/*---------------*/
 
-.gallery img {
-  border-radius: 8px;
-  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+/*-----task-3------*/
+input#name-input {
+  width: 360px;
+  height: 40px;
+  padding: 8px 16px;
+  margin-bottom: 16px;
+  border: 1px solid #808080;
+  border-radius: 4px;
+
+  letter-spacing: 0.04em;
+
+  outline: none;
+  transition: border-color 0.3s;
+}
+
+input#name-input:hover,
+input#name-input:focus {
+  border-color: #000;
+}
+
+h1,
+input#name-output {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 600;
+  font-size: 24px;
+
+  line-height: 1.33333;
+  letter-spacing: 0.04em;
 }
 
 /*---------------*/
