--- a/css/common.css
+++ b/css/common.css
@@ -28,7 +28,7 @@ ul {
 a {
   display: inline-block;
   margin-left: 24px;
-  margin-bottom: 30px;
+  margin-bottom: 50px;
   width: 140px;
   padding: 8px 16px;
   font-weight: 500;
@@ -103,6 +103,7 @@ input#name-input {
   height: 40px;
   padding: 8px 16px;
   margin-bottom: 16px;
+  margin-left: 24px;
   border: 1px solid #808080;
   border-radius: 4px;
 
@@ -127,4 +128,97 @@ input#name-output {
   letter-spacing: 0.04em;
 }
 
+h1 {
+  margin-left: 24px;
+}
+
 /*---------------*/
+
+/*-----task-4------*/
+.login-form {
+  border-radius: 8px;
+  padding: 24px;
+  width: 408px;
+  height: 256px;
+  background: #fff;
+  margin-left: 24px;
+}
+
+.login-form input {
+  display: block;
+  width: 100%;
+  border: 1px solid #808080;
+  border-radius: 4px;
+  padding: 8px 16px;
+  margin-top: 8px;
+  outline: none;
+  transition: border-color 0.3s;
+}
+
+.login-form input:hover,
+.login-form input:focus {
+  border-color: #000;
+}
+
+.login-form label {
+  display: block;
+  margin-bottom: 8px;
+}
+
+.login-form button {
+  display: inline-block;
+  margin-top: 16px;
+  border-radius: 8px;
+  padding: 8px 16px;
+  width: 86px;
+  height: 40px;
+  font-weight: 500;
+  color: #fff;
+  background: #4e75ff;
+  border: none;
+  border-color: transparent;
+  text-decoration: none;
+  text-align: center;
+  transition: 0.3s ease;
+}
+
+.login-form button:hover {
+  background: #6c8cff;
+}
+/*---------------*/
+
+/*-----task-5------*/
+.widget {
+  border-radius: 8px;
+  padding: 100px 88px;
+  width: 345px;
+  height: 280px;
+  margin-left: 24px;
+
+  background: #fff;
+}
+
+.change-color {
+  display: inline-block;
+  margin-top: 16px;
+  border-radius: 8px;
+  padding: 8px 16px;
+  width: 148px;
+  height: 40px;
+  font-weight: 500;
+  color: #fff;
+  background: #4e75ff;
+  border: none;
+  border-color: transparent;
+  text-decoration: none;
+  text-align: center;
+  transition: 0.3s ease;
+}
+
+p,
+p > span {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  letter-spacing: 0.04em;
+}
